# rust-learning

./: .gitignore  Cargo.toml  README.md
add_one/: Cargo.toml
adder/src/: main.rs
advanced/src/: main.rs
branches/src/: main.rs
closure/src/: main.rs
collection/src/: main.rs
concurrent/src/: main.rs
docs/src/: lib.rs  main.rs
docs/src/art/: kinds.rs  mod.rs  utils.rs
enums/src/: main.rs
error/src/: main.rs
functions/src/: main.rs
generic/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_macro/src/: main.rs
hello_macro_derive/: Cargo.toml
hello_macro_derive/src/: lib.rs
hello_world/: main
iterator/src/: lib.rs
lifetime/src/: main.rs
loops/src/: main.rs
matching/src/: main.rs
minigrep/: error.txt  output.txt
minigrep/src/: lib.rs  main.rs
module/src/: lib.rs  main.rs
oop/src/: lib.rs  main.rs
option/src/: main.rs
owner/src/: main.rs
pattern_matching/src/: main.rs
pointer/src/: lib.rs  main.rs
release_profile/: Cargo.toml
slice/src/: main.rs
structure/src/: main.rs
test_/: Cargo.toml
test_/src/: lib.rs
test_/tests/: integration_test.rs
trait_/src/: lib.rs  main.rs
variables/src/: main.rs
web_server/: hello.html
web_server/src/: main.rs
