[workspace]
members = [
    "branches",
    "closure",
    "collection",
    "docs",
    "enums",
    "error",
    "functions",
    "generic",
    "guessing_game",
    "hello_cargo",
    "iterator",
    "lifetime",
    "loops",
    "minigrep",
    "module",
    "option",
    "owner",
    "pattern_matching",
    "release_profile",
    "slice",
    "structure",
    "test_",
    "trait_",
    "variables",
    "add_one",
    "adder",
    "pointer",
    "concurrent",
    "oop",
]
